--- a/ProjectWeek/src/main/res/values/strings.xml
+++ b/ProjectWeek/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="sex">Sex</string>
     <string name="account">Compte</string>
     <string name="search">Rechercher</string>
+    <string name="borne">Voulez vous vous connecter à la borne ?</string>
 </resources>
