--- a/ProjectWeek/src/main/res/values/strings.xml
+++ b/ProjectWeek/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="borne">Voulez vous vous connecter à la borne ?</string>
     <string name="none">none</string>
     <string name="sample">sample</string>
+    <string name="validate">Valider</string>
 </resources>
